--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             document.getElementById("d2").innerHTML="";
         }
         function jaya() {
-            var j="please love me...😈"
+            var j="Fuck You...☠️😘"
             document.getElementById("d2").innerHTML=j;
             document.getElementById("d1").style.backgroundColor="#0";
             document.getElementById("d2").style.backgroundColor="#0";
