--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Do You Love Me ?</title>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-SS4K6K7ZSW"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-SS4K6K7ZSW');
+</script>
     <link href="https://fonts.cdnfonts.com/css/bloodstone" rel="stylesheet">
     <style>
         p {
