--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <title>Do You Love Me ?</title>
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-SS4K6K7ZSW"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-99JX07FTE1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-SS4K6K7ZSW');
+  gtag('config', 'G-99JX07FTE1');
 </script>
     <link href="https://fonts.cdnfonts.com/css/bloodstone" rel="stylesheet">
     <style>
